# OmniDocBench-ROCm

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  model-onboarding.md
.github/workflows/: ci.yml
contracts/: adapter.md  artifact-schema.json  backend-policy.md  backend-policy.zh-CN.md  badge-policy.md  conformance.md
docs/: architecture.md  ci-reality.md  contribute-a-model.md  contribute-a-model.zh-CN.md  governance.md  onboarding-runbook.md  p1-migration-playbook.md  pitfalls.md  roadmap.md
docs/adr/: 0001-rocm-project-boundary.md  0002-package-and-cli-migration.md
docs/audits/: 2026-07-omnidocbench-rocm-migration-audit.md
docs/superpowers/: HANDOFF-phaseA-paddleocrvl-onboarding-2026-07-12.md
docs/superpowers/plans/: 2026-07-12-amd-doc-parsing-platform-foundation.md  2026-07-19-linux-rocm-cdm-verified-onboarding.md  2026-07-19-omnidocbench-rocm-migration.md  2026-07-21-p0-platform-provenance.md  2026-07-21-self-contained-artifacts.md
docs/superpowers/reports/: 2026-07-21-p0.1-p1.1-cross-repo-report.md
docs/superpowers/specs/: 2026-07-12-amd-doc-parsing-platform-foundation-design.md  2026-07-19-linux-rocm-cdm-verified-onboarding-design.md  2026-07-19-omnidocbench-rocm-migration-design.md  2026-07-21-p0-platform-provenance-design.md  2026-07-21-self-contained-artifacts-design.md
engine/omnidocbench_amd/: _paths.py  cli.py  conformance.py  download_omnidocbench.py  schema.py  stages.py  types.py
engine/omnidocbench_amd/backends/: __init__.py  base.py  linux_rocm.py
engine/omnidocbench_rocm/: _paths.py  _refs.py  artifact_utils.py  bundle_validator.py  cdm_runner.py  cli.py  config_render.py  conformance.py  stages.py  types.py
hub/: registry.yaml
scripts/: check_brand.py  check_conformance.py  check_verified.py  generate_registry.py  generate_run_stats.py  validate_registry.py
template/: cookiecutter.json
template/{{cookiecutter.repo_name}}/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README.zh-CN.md  model_card.json  pyproject.toml
tests/: test_artifact_utils.py  test_backends.py  test_brand_residue.py  test_bundle_validator.py  test_cdm_toolchain.py  test_check_verified.py  test_checkout_default.py  test_cli.py  test_config_render.py  test_conformance.py  test_contract_integration.py  test_download.py  test_makefile_targets.py  test_registry.py  test_registry_validation.py  test_schema.py  test_smoke_config_pipeline.py  test_stages.py  test_template.py
tests/fixtures/: fake_adapter.py
tests/fixtures/conformant/: README.md  README.zh-CN.md  model_card.json  pyproject.toml
tests/fixtures/conformant/adapter/: run_adapter.py
tests/fixtures/conformant/eval/configs/: omnidocbench_v16.yaml
tests/fixtures/conformant/examples/: run_demo.sh
tests/fixtures/conformant/results/omnidocbench/v16/linux-rocm/: _run_stats.json
tests/fixtures/nonconformant/: README.md  pyproject.toml
tests/fixtures/nonconformant/eval/configs/: omnidocbench_v16.yaml
(+22 files in other folders)
