[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnidocbench-rocm"
version = "0.2.0"
description = "OmniDocBench-ROCm: open adaptation, evaluation, reproduction, and collaboration platform for document-parsing models on the AMD ROCm software stack."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "huggingface_hub>=0.24",
  "jsonschema>=4",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "cookiecutter>=2", "build"]
download = ["huggingface_hub>=0.24"]

[project.scripts]
omnidocbench-rocm = "omnidocbench_rocm.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["engine/omnidocbench_rocm"]

[tool.hatch.build.targets.wheel.force-include]
"contracts/artifact-schema.json" = "omnidocbench_rocm/data/artifact-schema.json"
"engine/omnidocbench_rocm/data/omnidocbench_v16.yaml.tmpl" = "omnidocbench_rocm/data/omnidocbench_v16.yaml.tmpl"
"engine/omnidocbench_rocm/cdm" = "omnidocbench_rocm/cdm"
"engine/omnidocbench_rocm/evalenv" = "omnidocbench_rocm/evalenv"
